[package]
name = "rs_dewall"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
image = "0.24.2"
rand = "0.8.5"
nalgebra = "0.32.2"
kd-tree = { version = "0.5.1", features = ["nalgebra", "rayon"] }
typenum = "1.16.0"
